<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">FingerPrintTest</string>


    <string name="enrol">Enrol fingerprint</string>


    <string name="fingerprint">Fingerprint Device</string>
    <string name="loading">Loading</string>
    <string name="preparing_device">Device is preparing, please wait…</string>
    <string name="closing_device">Device is closing, please wait…</string>
    <string name="fps_sn">Fingerprint device serial number is <xliff:g>%1$s</xliff:g>.</string>
    <string name="fps_fw">Fingerprint device firmware version is <xliff:g>%1$s</xliff:g>.</string>
    <string name="fp_collect_info">Single fingerprint collection information:</string>
    <string name="capture">Capture image:</string>
    <string name="extract">Extract feature:</string>
    <string name="generalize">Make template:</string>
    <string name="verify">Verify or identify:</string>
    <string name="enroll_fp">Enroll</string>
    <string name="verify_fp">Verify</string>
    <string name="identify_fp">Identify</string>
    <string name="clear_fp_db">Clear db</string>
    <string name="show_fp">Show image</string>
    <string name="press_finger">Please press finger on fingerprint device.</string>
    <string name="enrolling">Enrolling fingerprint to database…</string>
    <string name="verifying">Verifying fingerprint…</string>
    <string name="identifying">Identify fingerprint…</string>
    <string name="fingerprint_device_open_success">Fingerprint device open success!</string>
    <string name="fingerprint_device_open_failed">Fingerprint device open failed!</string>
    <string name="fingerprint_device_close_success">Fingerprint device close success!</string>
    <string name="fingerprint_device_close_failed">Fingerprint device close failed!</string>
    <string name="fingerprint_device_power_on_failed">Fingerprint device power on failed!</string>
    <string name="fingerprint_device_power_off_failed">Fingerprint device power off failed!</string>
    <string name="algorithm_initialization_failed">Algorithm initialization failed!</string>
    <string name="algorithm_cleanup_failed">Algorithm cleanup failed!</string>
    <string name="not_done">Not done yet</string>
    <string name="capture_image_success">Capture fingerprint image success!</string>
    <string name="capture_image_failed">Capture fingerprint image failed!</string>
    <string name="enroll_failed_because_of_extract_feature">Enroll failed because extract feature return error!</string>
    <string name="enroll_failed_because_of_make_template">Enroll failed because make template return error!</string>
    <string name="enroll_failed_because_of_get_id">Enroll failed because get free ID return error!</string>
    <string name="enroll_failed_because_of_error">Enroll failed!</string>
    <string name="enroll_success">Enroll success! The enrolled fingerprint ID is </string>
    <string name="verify_failed_because_of_extract_feature">Verify failed because extract feature return error!</string>
    <string name="verify_failed_because_of_error">Verify failed!</string>
    <string name="fingerprint_not_match">Fingerprint does not match!</string>
    <string name="fingerprint_match">Fingerprint match!</string>
    <string name="identify_failed_because_of_extract_feature">Identify failed because extract feature return error!</string>
    <string name="identify_failed_because_of_error">Identify failed!</string>
    <string name="identify_match">Identify success! The matched fingerprint ID is </string>
    <string name="clear_fingerprint_database_success">Clear fingerprint database success!</string>
    <string name="clear_fingerprint_database_failed">Clear fingerprint database failed!</string>
    <!-- Error Code Strings -->
    <string name="info_error">Error</string>
    <string name="operation_successful">Operation is successful!</string>
    <string name="error_operation_failed">Operation failed!</string>
    <string name="error_wrong_connection">Operation failed because of wrong connection!</string>
    <string name="error_device_busy">Operation failed because of device busy!</string>
    <string name="error_device_not_open">Operation failed because of device not open!</string>
    <string name="error_timeout">Operation failed because of timeout!</string>
    <string name="error_no_permission">Operation failed because of no permission!</string>
    <string name="error_wrong_parameter">Operation failed because of wrong parameter!</string>
    <string name="error_decode">Operation failed because of decode failed!</string>
    <string name="error_initialization_failed">Operation failed because of initialization failed!</string>
    <string name="error_unknown">Operation failed because of unknown error!</string>
    <string name="error_not_support">Operation failed because of not support!</string>
    <string name="error_not_enough_memory">Operation failed because of not enough memory!</string>
    <string name="error_device_not_found">Operation failed because of device not found!</string>
    <string name="error_device_reopen">Operation failed because of device reopen!</string>
    <string name="error_algorithm_initialization_failed">Operation failed because of fingerprint algorithm initialization failed!</string>
    <string name="error_invalid_feature_data">Operation failed because of invalid fingerprint feature data!</string>
    <string name="error_bad_image">Operation failed because of bad fingerprint image!</string>
    <string name="error_not_match">Operation failed because of fingerprint not match!</string>
    <string name="error_low_point">Operation failed because of fingerprint verify score is too low!</string>
    <string name="error_no_finger">Operation failed because of no finger!</string>
    <string name="error_no_result">Operation failed because of no match fingerprint are found in database!</string>
    <string name="error_out_of_bound">Operation failed because of id is out of range!</string>
    <string name="error_database_full">Operation failed because of database is full!</string>
    <string name="error_library_missing">Operation failed because of fingerprint algorithm library is missing!</string>
    <string name="error_algorithm_uninitialize">Operation failed because of fingerprint algorithm not initialized!</string>
    <string name="error_algorithm_reinitialize">Operation failed because of fingerprint algorithm reinitialize!</string>
    <string name="error_repeated_enroll">Operation failed because of fingerprint repeated enroll!</string>
    <string name="error_not_enrolled">Operation failed because of fingerprint not enrolled!</string>
    <string name="error_no_card">Operation failed because of no card!</string>
    <string name="error_invalid_card">Operation failed because of card invalid!</string>
    <string name="error_invalid_decode_lib">Operation failed because of decode library invalid!</string>
    <string name="error_card_validate_failed">Operation failed because of authentication card key failed!</string>
    <string name="error_card_not_activate">Operation failed because of card is not activated!</string>
    <string name="error_no_paper">Paper has been exhausted!</string>
    <string name="error_other">Operation failed because of other error!</string>
    <string name="right_finger_info_gotten">Right finger information gotten</string>
    <string name="left_finger_info_gotten">Left finger information gotten</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Sorry, registration failed</string>
    <string name="not_done_with_regsitration">Sorry, you are not done with registration</string>
    <string name="fingerprint_gotten">Fingerprint gotten</string>
    <string name="proceed_with_left_finger_registration">Please, proceed with left finger registration</string>
    <string name="proceed_with_registration">Please, proceed with registration</string>
    <string name="registration_canceled">Registration canceled!</string>
    <string name="try_again">Sorry, please try again</string>
    <string name="proceed_with_right_finger_registration">Please, proceed with right finger registration</string>
    <string name="place_left_thumb">Please, place left thumb on sensor</string>
    <string name="place_left_index">Please, place left index finger on sensor</string>
    <string name="place_left_middle">Please, Place left middle finger on sensor</string>
    <string name="place_left_ring">Please, Place left ring finger on sensor</string>
    <string name="place_left_pinky">Please, Place left pinky finger on sensor</string>
    <string name="place_right_thumb">Please, place right thumb on sensor</string>
    <string name="place_right_index">Please, place right index finger on sensor</string>
    <string name="place_right_middle">Please, Place right middle finger on sensor</string>
    <string name="place_right_ring">Please, Place right ring finger on sensor</string>
    <string name="place_right_pinky">Please, Place right pinky finger on sensor</string>
    <string name="already_captured">You\'re already captured for Today</string>
</resources>
